--- a/remake.yml
+++ b/remake.yml
@@ -398,11 +398,14 @@ targets:
   bromeliad_detritus_open:
     command: left_join(bromeliad_detritus_incidentrad, openness_conversion_table)
 
+  bromeliad_detritus_open_converted:
+    command: convert_incident_to_openness(bromeliad_detritus_open)
+
 # Elevation  ------------------------------------
 
 
   bromeliad_elevation:
-    command: add_elevation(bromeliad_detritus_open)
+    command: add_elevation(bromeliad_detritus_open_converted)
 
 # Abundances -----------------------------------------------------
 
