--- a/remake.yml
+++ b/remake.yml
@@ -424,4 +424,4 @@ targets:
 # RELEASE
 
   RELEASE/all_data.rds:
-    command: create_data_release(target_name, datasets = dats_date, visits = visits_date, traits = traits_bwg_and_new, bromeliads = bromeliad_elevation, abundance = spp_abundances_wide)
+    command: create_data_release(target_name, datasets = dats_date, visits = visits_date, traits = traits_bwg_and_new, bromeliads = bromeliad_elevation, abundance = summed_abundance_spp)
