simplifying the means of checking taxonomic categories. adds a very straightforward means of merging genus, species and subspecies together. uses numeric table to assign families to taxonomic rank. for #6

--- a/remake.yml
+++ b/remake.yml
@@ -52,8 +52,9 @@ targets:
       - dats
       - visits
       - broms
-      - trts_all # add the real traits
+      - trts_all
       - abds
+      - trait_spreadsheet
 
   outputs:
     depends:
